--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ body {
 #matt_img {
   shape-outside: polygon(17.5% 1.02%, 15.7% 25.07%, 20.11% 41.23%, 5.6% 59.26%, -1.3% 79.84%, -2.12% 99.41%, 83.34% 100%, 82.85% -0.43%);
 }
+
+.footer {
+  background-image: url("https://mattreimanncampaign.blob.core.windows.net/photos/skyline.jpg");
+  background-size: cover;
+}
